k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  clusterIP: None
  selector:
    app: ecommerce-backend
  ports:
    - port: 3000
      targetPort: 3000
