k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: ecommerce-frontend
  ports:
    - port: 80
      targetPort: 80
