k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-mern
  labels:
    name: ecommerce-mern
spec:
  ingressClassName: nginx
  rules:
    - host: ec-mern.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ecommerce-frontend
                port:
                  number: 80

    - host: ec-mern.com
      http:
        paths:
          - pathType: Prefix
            path: "/frontend"
            backend:
              service:
                name: ecommerce-frontend
                port:
                  number: 80

    - host: react.ec-mern.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: react-frontend
                port:
                  number: 80

    - host: ec-mern.com
      http:
        paths:
          - pathType: Prefix
            path: "/react"
            backend:
              service:
                name: react-frontend
                port:
                  number: 80
